--- a/pom.xml
+++ b/pom.xml
@@ -7,19 +7,12 @@
   <version>1.0-SNAPSHOT</version>
   <name>mymvnproject</name>
   <url>http://maven.apache.org</url>
-  <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
   <dependencies>
-    <!-- Dépendance Spring Boot Starter -->
     <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter</artifactId>
-        <version>2.6.4</version>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
     </dependency>
-
-    <!-- Ajoutez d'autres dépendances selon les besoins -->
   </dependencies>
 </project>
-
