--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,31 @@
   <version>1.0-SNAPSHOT</version>
   <name>mymvnproject</name>
   <url>http://maven.apache.org</url>
+
   <dependencies>
+    <!-- Dépendance pour JUnit (Test) -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- Dépendance pour Apache Commons Lang -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.12.0</version>
+    </dependency>
+
+    <!-- Dépendance pour log4j (Logger) -->
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
+    </dependency>
+
+    <!-- Vous pouvez ajouter d'autres dépendances nécessaires ici -->
   </dependencies>
 </project>
+
